<resources>
    <string name="app_name" translatable="false">Prog2Project</string>
    <string name="calendar_menu_string">Calendar</string>
    <string name="settings_menu_string">Settings</string>
    <string name="home_menu_string">Home</string>
    <string name="settings_top_text">Tweaks and Settings</string>
    <string name="home_top_text">Home</string>
    <string name="calendar_top_text">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="right_arrow">→</string>
    <string name="left_arrow">←</string>
    <string name="calendar_month_text">October</string>
    <string name="october">October</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="plus">+</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="to">to</string>

</resources>